# music-quiz

./: .env  .gitignore  Cargo.toml  Makefile  README.md  copy-shared.bat  install.ps1  release.ps1  rocket.toml  spotify.json
backend/: Cargo.toml  rocket.toml
backend/src/: communication.rs  game.rs  main.rs  quiz.rs  spotify.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: constants.ts  index.scss  index.tsx  spotifyLogin.tsx
frontend/src/components/: GameButton.scss  GameButton.tsx  MultiSlider.tsx  SingleSelection.tsx  TimeBar.scss  TimeBar.tsx
frontend/src/views/AdminView/: AdminView.scss  AdminView.tsx
frontend/src/views/GameView/: GameView.scss  GameView.tsx  GameViewConstants.ts
frontend/src/views/GlobalStateProvider/: GlobalStateProvider.tsx
frontend/src/views/LoginView/: LoginView.scss  LoginView.tsx
frontend/src/views/RedirectView/: RedirectView.tsx
frontend/src/views/ResultView/: ResultView.scss  ResultView.tsx
shared/: spotify.json  spotify_devel.json  spotify_template.json
src/: game.rs  main.rs  quiz.rs  spotify.rs  types.rs
src/types/: playlist_response.rs  tracks_response.rs
static/: index.js  style.css
templates/: index.html.hbs
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.scss  App.tsx  index.scss  index.tsx  spotifyLogin.tsx
web/src/components/: ButtonContainer.tsx  GameButton.scss  GameButton.tsx  SingleSelection.tsx  TimeBar.scss  TimeBar.tsx
web/src/views/AdminView/: AdminView.scss  AdminView.tsx
web/src/views/GameView/: GameView.scss  GameView.tsx
web/src/views/GlobalStateProvider/: GlobalStateProvider.tsx
web/src/views/LoginView/: LoginView.scss  LoginView.tsx
web/src/views/RedirectView/: RedirectView.tsx
web/src/views/ResultView/: ResultView.scss  ResultView.tsx
