[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.136"
rocket_dyn_templates = { version = "0.1.0-rc.1" , features = ["handlebars"]}
