[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.136"
rocket_dyn_templates = { version = "0.1.0-rc.1" , features = ["handlebars"]}
thiserror = "1.0.30"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking"]}