[package]
name = "music-quiz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.85"
thiserror = "1.0.30"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"]}
rspotify = { version = "0.11.5", default-features = false, features = ["client-ureq", "ureq-rustls-tls", "env-file"] }
chrono = "0.4.19"
simple_logger = "2.1.0"
log = "0.4.16"
rodio = "0.15.0"
bytes = "1.1.0"
ts-rs = {version = "6.1.2", features = ["format"]}
axum = {version = "0.5.16", features = ["ws"]}
axum-extra = { version = "0.3.7", features = ["spa"] }
tower-http = {version = "0.3.4", features = ["fs"]}
tokio = {version = "1.21.2", features = ["full"]}
clap = {version = "4.0.9", features = ["derive"]}
futures = "0.3.24"
minterpolate = "0.4.0"